# Webhookbot

./:  kwin_strategy.py  2_Backtest.py  3_Settings.py  4_Analytics.py  CHANGELOG_v2.2.0_ULTIMATE.md  COMPATIBILITY_VERIFICATION_REPORT.md  COMPLETE_PACKAGE_MANIFEST.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_PINE_PATCHES_APPLIED.md  CRITICAL_SFP_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE_v2.md  FINAL_CRITICAL_FIXES_SUMMARY.md  FINAL_PINE_SCRIPT_ACHIEVEMENT.md  PACKAGE_INFO_CRITICAL_PATCHES.md  Pine  Procfile  RAILWAY_DEPLOYMENT_INSTRUCTIONS.md  RAILWAY_SETUP_GUIDE.md  README.md  README.txt  README_RAILWAY_DEPLOYMENT.md  RENDER_SETUP.md  TECH_REQUIREMENTS_COMPLIANCE.md  ULTIMATE_RELEASE_NOTES.md  VERSION_CHANGELOG.md  WEBSOCKET_PINE_INTEGRATION.md  analytics.py  app.py  bybit_api.py  bybit_client.py  bybit_simulator.py  bybit_v5_fixed.py  clean_v5_status.txt  config.py  database.py  datafeed_ws.py  demo_mode.py  deployment_checklist.md  deployment_instructions.md  flask_app.py  (+24 more)
__disabled__/: datafeed_ws.py  test_suite.py  websocket_runner.py
pages/: 1_Dashboard.py  2_Backtest.py  3_Settings.py  4_Analytics.py
static/: style.css
templates/: index.html
