[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
